# VisionPilotROSDistro

./: README.md
ROS/: instructions
ROS/offboard/: CMakeLists.txt  package.xml
ROS/offboard/include/offboard/: utils.h  vision_utils.h
ROS/offboard/launch/: get_ref_image.launch  start_offb.launch
ROS/offboard/scripts/: offb_node.py  offb_posvel.py  offb_trayectoria_cuadrada.py  pbvs_node.py  vision_utils.py
ROS/offboard/src/: offb_node.cpp  pbvs_node.cpp  save_image_listener.cpp
ROS/px4/px4/launch/: mavros_posix_sitl.launch
ROS/px4/px4/models/box/: box.sdf
ROS/px4/px4/models/cuadro_camara/: model.config  model.sdf
ROS/px4/px4/models/cuadro_edificio/: model.config  model.sdf
ROS/px4/px4/models/cuadro_pajaro/: model.config  model.sdf
ROS/px4/px4/models/cuadro_perro/: model.config  model.sdf
ROS/px4/px4/models/cuadro_radio/: model.config  model.sdf
ROS/px4/px4/models/cuadro_robot/: model.config  model.sdf
ROS/px4/px4/models/cuadro_semaforo/: model.config  model.sdf
ROS/px4/px4/models/cuadro_walle/: model.config  model.sdf
ROS/px4/px4/models/iris/: iris.sdf  iris.sdf.jinja  iris.sdf.last_generated
ROS/px4/px4/models/pal_textured_object/: pal_textured_object.sdf
ROS/px4/px4/models/wall_with_reem_photo/: model.sdf
ROS/px4/px4/world/: office.world
ROS2/: README.md
ROS2/offboard/: package.xml  setup.py
ROS2/offboard/launch/: start_offb.launch.py
ROS2/offboard/resource/: ros2_offboard
ROS2/offboard/ros2_offboard/: __init__.py  offb_node.py  pbvs_node.py  vision_utils.py
(+11 files in other folders)
